tests/ssl-test.c
@@ -122,7 +122,7 @@ do_strict_tests (char *uri)
 {
 	SoupSession *session;
 
-	debug_printf (1, "strict/nonstrict\n");
+	debug_printf (1, "\nstrict/nonstrict\n");
 
 	session = soup_test_session_new (SOUP_TYPE_SESSION_ASYNC, NULL);
 	debug_printf (1, "  async with CA list\n");
@@ -144,6 +144,164 @@ do_strict_tests (char *uri)
 	do_one_strict_test (session, uri, FALSE, TRUE, SOUP_STATUS_OK);
 	debug_printf (1, "  sync non-strict without CA list\n");
 	do_one_strict_test (session, uri, FALSE, FALSE, SOUP_STATUS_OK);
+	soup_test_session_abort_unref (session);
+}
+
+static void
+property_changed (GObject *object, GParamSpec *param, gpointer user_data)
+{
+	gboolean *changed = user_data;
+
+	*changed = TRUE;
+}
+
+static void
+do_session_property_tests (void)
+{
+	gboolean use_system_changed, tlsdb_changed, ca_file_changed;
+	gboolean use_system;
+	GTlsDatabase *tlsdb;
+	char *ca_file;
+	SoupSession *session;
+
+	debug_printf (1, "session properties\n");
+
+	session = soup_session_async_new ();
+	g_signal_connect (session, "notify::ssl-use-system-ca-file",
+			  G_CALLBACK (property_changed), &use_system_changed);
+	g_signal_connect (session, "notify::tls-database",
+			  G_CALLBACK (property_changed), &tlsdb_changed);
+	g_signal_connect (session, "notify::ssl-ca-file",
+			  G_CALLBACK (property_changed), &ca_file_changed);
+
+	g_object_get (G_OBJECT (session),
+		      "ssl-use-system-ca-file", &use_system,
+		      "tls-database", &tlsdb,
+		      "ssl-ca-file", &ca_file,
+		      NULL);
+	if (use_system) {
+		debug_printf (1, "  ssl-use-system-ca-file defaults to TRUE?\n");
+		errors++;
+	}
+	if (tlsdb) {
+		debug_printf (1, "  tls-database set by default?\n");
+		errors++;
+		g_object_unref (tlsdb);
+	}
+	if (ca_file) {
+		debug_printf (1, "  ca-file set by default?\n");
+		errors++;
+		g_free (ca_file);
+	}
+
+	use_system_changed = tlsdb_changed = ca_file_changed = FALSE;
+	g_object_set (G_OBJECT (session),
+		      "ssl-use-system-ca-file", TRUE,
+		      NULL);
+	g_object_get (G_OBJECT (session),
+		      "ssl-use-system-ca-file", &use_system,
+		      "tls-database", &tlsdb,
+		      "ssl-ca-file", &ca_file,
+		      NULL);
+	if (!use_system) {
+		debug_printf (1, "  setting ssl-use-system-ca-file failed\n");
+		errors++;
+	}
+	if (!tlsdb) {
+		debug_printf (1, "  setting ssl-use-system-ca-file didn't set tls-database\n");
+		errors++;
+	} else
+		g_object_unref (tlsdb);
+	if (ca_file) {
+		debug_printf (1, "  setting ssl-use-system-ca-file set ssl-ca-file\n");
+		errors++;
+		g_free (ca_file);
+	}
+	if (!use_system_changed) {
+		debug_printf (1, "  setting ssl-use-system-ca-file didn't emit notify::ssl-use-system-ca-file\n");
+		errors++;
+	}
+	if (!tlsdb_changed) {
+		debug_printf (1, "  setting ssl-use-system-ca-file didn't emit notify::tls-database\n");
+		errors++;
+	}
+	if (ca_file_changed) {
+		debug_printf (1, "  setting ssl-use-system-ca-file emitted notify::ssl-ca-file\n");
+		errors++;
+	}
+
+	use_system_changed = tlsdb_changed = ca_file_changed = FALSE;
+	g_object_set (G_OBJECT (session),
+		      "ssl-ca-file", SRCDIR "/test-cert.pem",
+		      NULL);
+	g_object_get (G_OBJECT (session),
+		      "ssl-use-system-ca-file", &use_system,
+		      "tls-database", &tlsdb,
+		      "ssl-ca-file", &ca_file,
+		      NULL);
+	if (use_system) {
+		debug_printf (1, "  setting ssl-ca-file left ssl-use-system-ca-file set\n");
+		errors++;
+	}
+	if (!tlsdb) {
+		debug_printf (1, "  setting ssl-ca-file didn't set tls-database\n");
+		errors++;
+	} else
+		g_object_unref (tlsdb);
+	if (!ca_file) {
+		debug_printf (1, "  setting ssl-ca-file failed\n");
+		errors++;
+	} else
+		g_free (ca_file);
+	if (!use_system_changed) {
+		debug_printf (1, "  setting ssl-ca-file didn't emit notify::ssl-use-system-ca-file\n");
+		errors++;
+	}
+	if (!tlsdb_changed) {
+		debug_printf (1, "  setting ssl-ca-file didn't emit notify::tls-database\n");
+		errors++;
+	}
+	if (!ca_file_changed) {
+		debug_printf (1, "  setting ssl-ca-file didn't emit notify::ssl-ca-file\n");
+		errors++;
+	}
+
+	use_system_changed = tlsdb_changed = ca_file_changed = FALSE;
+	g_object_set (G_OBJECT (session),
+		      "tls-database", NULL,
+		      NULL);
+	g_object_get (G_OBJECT (session),
+		      "ssl-use-system-ca-file", &use_system,
+		      "tls-database", &tlsdb,
+		      "ssl-ca-file", &ca_file,
+		      NULL);
+	if (use_system) {
+		debug_printf (1, "  setting tls-database NULL left ssl-use-system-ca-file set\n");
+		errors++;
+	}
+	if (tlsdb) {
+		debug_printf (1, "  setting tls-database NULL failed\n");
+		errors++;
+		g_object_unref (tlsdb);
+	}
+	if (ca_file) {
+		debug_printf (1, "  setting tls-database didn't clear ssl-ca-file\n");
+		errors++;
+		g_free (ca_file);
+	}
+	if (use_system_changed) {
+		debug_printf (1, "  setting tls-database emitted notify::ssl-use-system-ca-file\n");
+		errors++;
+	}
+	if (!tlsdb_changed) {
+		debug_printf (1, "  setting tls-database didn't emit notify::tls-database\n");
+		errors++;
+	}
+	if (!ca_file_changed) {
+		debug_printf (1, "  setting tls-database didn't emit notify::ssl-ca-file\n");
+		errors++;
+	}
+
 	soup_test_session_abort_unref (session);
 }
 
@@ -175,6 +333,7 @@ main (int argc, char **argv)
 		uri = g_strdup_printf ("https://127.0.0.1:%u/",
 				       soup_server_get_port (server));
 
+		do_session_property_tests ();
 		do_strict_tests (uri);
 		do_properties_tests (uri);
 
